@startuml

title __LIGHTS's Class Diagram__\n

  namespace edu.up.isgc.raytracer {
    namespace lights {
      class edu.up.isgc.raytracer.lights.DirectionalLight {
          + DirectionalLight()
          + getDirection()
          + getNDotL()
          + setDirection()
      }
    }
  }
  

  namespace edu.up.isgc.raytracer {
    namespace lights {
      abstract class edu.up.isgc.raytracer.lights.Light {
          - intensity : double
          + Light()
          + getIntensity()
          + getIntersection()
          {abstract} + getNDotL()
          + setIntensity()
      }
    }
  }
  

  namespace edu.up.isgc.raytracer {
    namespace lights {
      class edu.up.isgc.raytracer.lights.PointLight {
          + PointLight()
          + getNDotL()
      }
    }
  }
  

  edu.up.isgc.raytracer.lights.DirectionalLight -up-|> edu.up.isgc.raytracer.lights.Light
  edu.up.isgc.raytracer.lights.DirectionalLight o-- edu.up.isgc.raytracer.Vector3D : direction
  edu.up.isgc.raytracer.lights.Light -up-|> edu.up.isgc.raytracer.objects.Object3D
  edu.up.isgc.raytracer.lights.PointLight -up-|> edu.up.isgc.raytracer.lights.Light


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
